--- a/coffeehouses/static/css/homepagetest.css
+++ b/coffeehouses/static/css/homepagetest.css
@@ -464,5 +464,6 @@ footer {
         width: 60%;
         height: 60%;
         margin-left: 0;
+        margin-bottom: 15px;
     }
 }
